# qt-sonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SDL_internal.h  TODO.md  dw.pro  pngcrush-assets.sh  qml.qrc  qt-sonic.pro
android/: .directory  AndroidManifest.xml
assets/: .directory  DWControls.qml  DWField.qml  DWFieldController.qml  DWFieldPhysicsDrawer.qml  DWGlobalResources.qml  DWHud.qml  DWIntroSequence.qml  DWLevelBGM.qml  DWLevelBGMNew.qml  DWLevelBGMOld.qml  DWLevelBGMPlayer.qml  DWLevelBackground.qml  DWLevelField.qml  DWLevelFieldCamera.qml  DWLevelFieldObjManager.qml  DWLevelFieldVisManager.qml  DWLevelScene.qml  DWMainScreen.qml  DWMainWindow.qml  DWSoundEffect.qml  DWTextBitmap.qml  PLevelChunkGArc.qml  PLevelChunkGRamp.qml  PLevelChunkGTop.qml  PLevelChunkVisualPaletted.qml  main.qml
assets-src/: #READ ME FIRST#.txt  .directory  ChaotixFontsHud.xcf  arcade.php  bg.xcf  cropping.url  electric-shield.xcf  mm-gf.sh  red-ring-techokami.xcf  shield-3-flare.xcf  shield-3.xcf  titlecard.xcf
doc/: readme.xcf
qml/: DWControls.qml  DWDebugOutline.qml  DWField.qml  DWFieldController.qml  DWFieldPhysicsDrawer.qml  DWGlobalResources.qml  DWLevelBGM.qml  DWLevelBGMPlayer.qml  DWLevelBackground.qml  DWLevelField.qml  DWLevelFieldCamera.qml  DWLevelFieldObjManager.qml  DWLevelFieldVisManager.qml  DWLevelHud.qml  DWLevelScene.qml  DWMainScreen.qml  DWMainWindow.qml  DWSoundEffect.qml  DWTextBitmap.qml  FundoExemplo.qml
src/: dwanimatable.cpp  dwanimatable.h  dwanimationupdater.cpp  dwanimationupdater.h  dwcomponentcache.cpp  dwcomponentcache.h  dwcontrollerhub.cpp  dwcontrollerhub.h  dwcontrollerstate.cpp  dwcontrollerstate.h  dweveryframe.cpp  dweveryframe.h  dwfieldbvh.cpp  dwfieldbvh.h  dwfieldbvhnode.cpp  dwfieldbvhnode.h  dwfieldobject.cpp  dwfieldobject.h  dwfieldphysicscontactlistener.cpp  dwfieldphysicscontactlistener.h  dwfieldphysicsworld.cpp  dwfieldphysicsworld.h  dwfophysicsbody.h  (+27 more)
(+344 files in other folders)
